Update index.html local images

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                <section>
 
 <img
-                           src="https://images.leadconnectorhq.com/image/f_webp/q_80/r_1200/u_https://assets.cdn.filesafe.space/8gqcjfyOUfE7qsDK1ZRL/media/6652738fabee1881bd93948e.png"
+                           src="https://images.leadconnectorhq.com/image/f_webp/q_80/r_1200/u_https://assets.cdn.filesafe.space/8gqcjfyOUfE7qsDK1ZRL/media/6652738fabee1881bd93948e.webp"
                            loading="lazy">
                   <h3>Who am I?</h3>
                   <p style="color: #181628; font-size: 25px; width:150%">
@@ -77,7 +77,7 @@
                   <article itemscope itemtype="https://schema.org/Article">
                      <div>
                         <img
-                           src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67365f478cbdd23b3a087fc9.png"
+                           src="67365f478cbdd23b3a087fc9.webp"
                            loading="lazy">
                      </div>
                      <a target="_blank">
@@ -91,7 +91,7 @@
                   <article itemscope itemtype="https://schema.org/Article">
                      <div>
                         <img
-                           src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366c17732b00746326909c.png"
+                           src="67366c17732b00746326909c.webp"
                            loading="lazy">
                      </div>
                      <a target="_blank">
@@ -105,7 +105,7 @@
                   <article itemscope itemtype="https://schema.org/Article">
                      <div>
                         <img
-                           src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366cb9732b008568269f6f.png"
+                           src="67366cb9732b008568269f6f.webp"
                            loading="lazy">
                      </div>
                      <a target="_blank">
@@ -119,7 +119,7 @@
                   <article itemscope itemtype="https://schema.org/Article">
                      <div>
                         <img
-                           src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366d641e65b5da67f5652d.jpeg"
+                           src="67366d641e65b5da67f5652d.webp"
                            loading="lazy">
                      </div>
                      <a target="_blank">
@@ -133,7 +133,7 @@
                   <article itemscope itemtype="https://schema.org/Article">
                      <div>
                         <img
-                           src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366d64b6fe8e6a90fd2bf2.jpeg"
+                           src="67366d64b6fe8e6a90fd2bf2.webp"
                            loading="lazy">
                      </div>
                      <a target="_blank">
@@ -147,7 +147,7 @@
                 <article itemscope itemtype="https://schema.org/Article">
                    <div>
                       <img
-                         src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bcee6c46cc0b5b9e1880.png"
+                         src="67e5bcee6c46cc0b5b9e1880.webp"
                          loading="lazy">
                    </div>
                    <a target="_blank">
@@ -161,7 +161,7 @@
                 <article itemscope itemtype="https://schema.org/Article">
                    <div>
                       <img
-                         src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bb50379294a35fe266ac.png"
+                         src="67e5bb50379294a35fe266ac.webp"
                          loading="lazy">
                    </div>
                    <a target="_blank">
@@ -213,9 +213,9 @@
       <div class="popup-content">
          <span class="close" data-popup="popup1">&times;</span>
          <div class="image-section">
-            <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/673669e2732b0030e3267f8a.png"
+            <img src="673669e2732b0030e3267f8a.webp"
                alt="Image 1">
-            <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67365f478cbdd23b3a087fc9.png"
+            <img src="67365f478cbdd23b3a087fc9.webp"
                alt="Image 2">
          </div>
          <p class="text-paragraph">
@@ -233,7 +233,7 @@
       <div class="popup-content">
          <span class="close" data-popup="popup2">&times;</span>
          <div class="image-section">
-            <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366c17732b00746326909c.png"
+            <img src="67366c17732b00746326909c.webp"
                alt="Image 1">
          </div>
          <p class="text-paragraph">
@@ -248,9 +248,9 @@
       <div class="popup-content">
          <span class="close" data-popup="popup3">&times;</span>
          <div class="image-section">
-            <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366cb9732b000a42269f70.jpeg"
+            <img src="67366cb9732b000a42269f70.webp"
                alt="Image 1">
-            <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366cb9732b008568269f6f.png"
+            <img src="67366cb9732b008568269f6f.webp"
                alt="Image 2">
          </div>
          <p class="text-paragraph">
@@ -266,9 +266,9 @@
       <div class="popup-content">
          <span class="close" data-popup="popup4">&times;</span>
          <div class="image-section">
-            <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366d641e65b5da67f5652d.jpeg"
+            <img src="67366d641e65b5da67f5652d.webp"
                alt="Image 1">
-            <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/673cf5e71385f79aaf978ade.jpeg"
+            <img src="673cf5e71385f79aaf978ade.webp"
                alt="Image 1">
 
          </div>
@@ -283,9 +283,9 @@
       <div class="popup-content">
          <span class="close" data-popup="popup5">&times;</span>
          <div class="image-section">
-            <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366d64b6fe8e6a90fd2bf2.jpeg"
+            <img src="67366d64b6fe8e6a90fd2bf2.webp"
                alt="Image 1">
-            <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366d642fd9d484cbeab676.jpeg"
+            <img src="67366d642fd9d484cbeab676.webp"
                alt="Image 2">
          </div>
          <p class="text-paragraph">
@@ -300,20 +300,20 @@
        <span class="close" data-popup="popup6">&times;</span>
        <p class="text-paragraph">Final Edits</p>
        <div class="gallery-container">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bcee6c46cc0b5b9e1880.png" alt="Gallery image 1">
+        <img src="67e5bcee6c46cc0b5b9e1880.webp" alt="Gallery image 1">
        </div>
        <p class="text-paragraph">Raw Photos</p>
        <div class="gallery-container">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c2901870f46418422341.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c29082c9d8192cc002cc.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c2902790d690a17e7495.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c290e519ed1d7e238ab2.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c290e519ed2a37238ab1.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c290c5f22adf4da93ed1.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c2906c46cc1e499e1de8.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c290c5f22a7e9ca93ed0.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c2903792945a07e26d83.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c290e519ed6e45238ab0.jpeg">
+        <img src="67e5c2901870f46418422341.webp">
+        <img src="67e5c29082c9d8192cc002cc.webp">
+        <img src="67e5c2902790d690a17e7495.webp">
+        <img src="67e5c290e519ed1d7e238ab2.webp">
+        <img src="67e5c290e519ed2a37238ab1.webp">
+        <img src="67e5c290c5f22adf4da93ed1.webp">
+        <img src="67e5c2906c46cc1e499e1de8.webp">
+        <img src="67e5c290c5f22a7e9ca93ed0.webp">
+        <img src="67e5c2903792945a07e26d83.webp">
+        <img src="67e5c290e519ed6e45238ab0.webp">
       </div>
 
         <h5>Project Overview</h5>
@@ -333,46 +333,46 @@
        <span class="close" data-popup="popup6">&times;</span>
        <p class="text-paragraph">Final Edits</p>
        <div class="gallery-container">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bb5013c4b637d90dd34d.png" alt="Gallery image 1">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bb50379294a35fe266ac.png" alt="Gallery image 2">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bb50aebc1a20e6b8e20d.png" alt="Gallery image 3">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bb502790d6451f7e677a.png" alt="Gallery image 4">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bb50e519edb836237e0d.png" alt="Gallery image 5">
+        <img src="67e5bb5013c4b637d90dd34d.webp" alt="Gallery image 1">
+        <img src="67e5bb50379294a35fe266ac.webp" alt="Gallery image 2">
+        <img src="67e5bb50aebc1a20e6b8e20d.webp" alt="Gallery image 3">
+        <img src="67e5bb502790d6451f7e677a.webp" alt="Gallery image 4">
+        <img src="67e5bb50e519edb836237e0d.webp" alt="Gallery image 5">
       </div>
        <p class="text-paragraph">Raw Photos</p>
        <div class="gallery-container">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc1870f4fc88422038.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc6c46ccdb839e1b25.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdcc5f22a1f94a93c63.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc4aaf2014bae78740.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdce519ed31cc238821.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc2790d61dfe7e71e0.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc1870f47e68422039.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdcaebc1a8438b8e5d7.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc6c46cc6e629e1b28.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdcc5f22a3007a93c64.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdce519edf7e0238825.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc37929445f0e26a99.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc82c9d8472bc0004e.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc2790d6206a7e71e1.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdcaebc1a198eb8e5da.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdce519edeaed238823.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc1870f4790742203a.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdcc5f22af54fa93c67.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc1870f41d7042203b.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdce519ed45a2238824.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc13c4b6cd340dd757.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdcaebc1aae24b8e5d8.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc3792943c51e26a9b.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc6c46cc50809e1b26.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc13c4b6259d0dd756.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc82c9d836d0c00050.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc82c9d83e98c0004f.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdce519edb870238822.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc4aaf201e2fe7873f.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc2790d621c37e71df.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc3792940aa9e26a9a.jpeg">
-        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdce519edbd1d238826.jpeg">
+        <img src="67e5bfdc1870f4fc88422038.webp">
+        <img src="67e5bfdc6c46ccdb839e1b25.webp">
+        <img src="67e5bfdcc5f22a1f94a93c63.webp">
+        <img src="67e5bfdc4aaf2014bae78740.webp">
+        <img src="67e5bfdce519ed31cc238821.webp">
+        <img src="67e5bfdc2790d61dfe7e71e0.webp">
+        <img src="67e5bfdc1870f47e68422039.webp">
+        <img src="67e5bfdcaebc1a8438b8e5d7.webp">
+        <img src="67e5bfdc6c46cc6e629e1b28.webp">
+        <img src="67e5bfdcc5f22a3007a93c64.webp">
+        <img src="67e5bfdce519edf7e0238825.webp">
+        <img src="67e5bfdc37929445f0e26a99.webp">
+        <img src="67e5bfdc82c9d8472bc0004e.webp">
+        <img src="67e5bfdc2790d6206a7e71e1.webp">
+        <img src="67e5bfdcaebc1a198eb8e5da.webp">
+        <img src="67e5bfdce519edeaed238823.webp">
+        <img src="67e5bfdc1870f4790742203a.webp">
+        <img src="67e5bfdcc5f22af54fa93c67.webp">
+        <img src="67e5bfdc1870f41d7042203b.webp">
+        <img src="67e5bfdce519ed45a2238824.webp">
+        <img src="67e5bfdc13c4b6cd340dd757.webp">
+        <img src="67e5bfdcaebc1aae24b8e5d8.webp">
+        <img src="67e5bfdc3792943c51e26a9b.webp">
+        <img src="67e5bfdc6c46cc50809e1b26.webp">
+        <img src="67e5bfdc13c4b6259d0dd756.webp">
+        <img src="67e5bfdc82c9d836d0c00050.webp">
+        <img src="67e5bfdc82c9d83e98c0004f.webp">
+        <img src="67e5bfdce519edb870238822.webp">
+        <img src="67e5bfdc4aaf201e2fe7873f.webp">
+        <img src="67e5bfdc2790d621c37e71df.webp">
+        <img src="67e5bfdc3792940aa9e26a9a.webp">
+        <img src="67e5bfdce519edbd1d238826.webp">
       </div>
       <h5>Project Overview</h5>
       <p>For this assignment, I explored creative shadow photography by shooting various objects that cast interesting and dramatic shadows. Working in a group setting, I used both classroom-provided materials and personal objects to stage unique compositions. I captured 30+ color photographs, focusing on how light interacts with shape and texture. After narrowing my images down to a strong selection of 30, I chose 5 to edit using Photopea, applying a variety of both basic and advanced editing techniques, and converting at least one to black and white.
